force-app/main/default/objects/Beneficiary__c/Beneficiary__c.object-meta.xml
<CustomObject>
    <label>Beneficiary</label>
    <nameField>
        <displayFormat>BEN-{000000}</displayFormat>
        <label>Beneficiary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beneficiaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>