force-app/main/default/objects/Beneficiary__c/fields/Total_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit__c</fullName>
    <label>Total Credit</label>
    <summarizedField>Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.Type__c</field>
        <operation>equals</operation>
        <value>Credit</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Beneficiary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>