force-app/main/default/objects/Beneficiary__c/fields/VPA__c.field-meta.xml
<CustomField>
    <fullName>VPA__c</fullName>
    <label>VPA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>