force-app/main/default/objects/Beneficiary__c/listViews/FiNest_Beneficiaries.listView-meta.xml
<ListView>
    <fullName>FiNest_Beneficiaries</fullName>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>VPA__c</columns>
    <filterScope>Everything</filterScope>
    <label>FiNest Beneficiaries</label>
</ListView>